--- a/package.json
+++ b/package.json
@@ -188,6 +188,7 @@
     "postcss": "^8.5.1",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
+    "sass": "^1.89.2",
     "shiki": "^2.5.0",
     "tailwindcss": "^3.4.10",
     "typescript": "^5",
