--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
     "path": "^0.12.7",
     "primeicons": "^7.0.0",
     "qss": "^3.0.0",
+    "radix-ui": "^1.4.2",
     "react": "^19.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.1.0",
