--- a/package.json
+++ b/package.json
@@ -186,6 +186,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.4",
     "postcss": "^8.5.6",
+    "postcss-import": "^16.1.1",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.13",
     "sass": "^1.89.2",
