--- a/package.json
+++ b/package.json
@@ -46,12 +46,12 @@
     "@heroui/button": "^2.2.10",
     "@heroui/progress": "^2.2.7",
     "@heroui/react": "^2.6.14",
+    "@heroui/skeleton": "^2.2.14",
     "@heroui/system": "^2.4.7",
     "@heroui/theme": "^2.4.6",
     "@hookform/resolvers": "^3.10.0",
     "@mdx-js/react": "^3.0.1",
     "@nanostores/react": "github:nanostores/react",
-    "@nextui-org/skeleton": "^2.0.32",
     "@nextui-org/system": "^2.2.6",
     "@nextui-org/theme": "^2.2.11",
     "@number-flow/react": "^0.5.5",
@@ -183,7 +183,7 @@
     "electron": "^27.3.11",
     "electron-builder": "^24.13.3",
     "electron-is-dev": "^3.0.1",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.4",
     "postcss": "^8.5.6",
     "postcss-import": "^16.1.1",
