--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,9 +24,7 @@
       }
     ],
     "paths": {
-      "@/*": [
-        "./src/*"
-      ],
+      "@/*": ["./src/*", "mdx-components.tsx"],
       "contentlayer/generated": [
         "./.contentlayer/generated"
       ],
