--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,13 +24,9 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*", "mdx-components.tsx"],
-      "contentlayer/generated": [
-        "./.contentlayer/generated"
-      ],
-      "#site/content": [
-        "./.velite"
-      ]
+      "@/*": ["./src/*", "mdx-components.tsx", "source.ts"],
+      "contentlayer/generated": ["./.contentlayer/generated"],
+      "#site/content": ["./.velite"]
     },
     "target": "ES2017"
   },
