--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Decent-vf",
+  "name": "decent-over",
   "version": "10.9.5",
   "private": true,
   "main": "main.js",
@@ -107,12 +107,12 @@
     "framer-motion": "^12.4.2",
     "fs": "^0.0.1-security",
     "fumadocs": "^0.0.0",
-    "fumadocs-core": "^15.5.4",
+    "fumadocs-core": "^15.5.5",
     "fumadocs-docgen": "^1.3.6",
     "fumadocs-mdx": "^11.6.9",
     "fumadocs-openapi": "^6.0.4",
     "fumadocs-twoslash": "^3.0.0",
-    "fumadocs-ui": "^15.5.4",
+    "fumadocs-ui": "^15.5.5",
     "geist": "^1.3.0",
     "github-slugger": "^1.5.0",
     "input-otp": "^1.4.2",
