refactor: update import paths for docs and blogPosts in source.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
       }
     ],
     "paths": {
+      "@/.source": ["./.source/index.ts"],
       "@/*": ["./src/*", "mdx-components.tsx", "source.ts"],
       "contentlayer/generated": ["./.contentlayer/generated"],
       "#site/content": ["./.velite"]
