--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "@types/mdx": "^2.0.13",
     "@vercel/analytics": "^1.5.0",
     "@wavesurfer/react": "^1.0.9",
+    "@workos-inc/authkit-nextjs": "^2.4.1",
     "ai": "^3.3.27",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
