fix: update import paths for Tailwind configuration in globals.css and tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
     ],
     "paths": {
       "@/.source": ["./.source/index.ts"],
+      "@/tailwind.config.ts": ["./tailwind.config.ts"],
       "@/*": ["./src/*", "mdx-components.tsx", "source.ts"],
       "contentlayer/generated": ["./.contentlayer/generated"],
       "#site/content": ["./.velite"]
