feat: add dashboard page with authentication and sign out functionality
fix(pricing): update border classes for input styling in individual pricing page

fix(auth-ui): refactor sign-out button form submission to prevent default behavior

--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "@wavesurfer/react": "^1.0.9",
     "@workos-inc/authkit-nextjs": "^2.4.1",
     "ai": "^3.3.27",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
@@ -125,6 +126,7 @@
     "markdown-to-jsx": "^7.5.0",
     "marked": "^15.0.6",
     "media-chrome": "^4.4.0",
+    "mongoose": "^8.16.1",
     "motion": "^11.18.2",
     "motion-plus": "^0.1.6",
     "nanostores": "^0.11.4",
