--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
     "path": "^0.12.7",
     "primeicons": "^7.0.0",
     "qss": "^3.0.0",
+    "radix-themes-tw": "^1.1.0",
     "radix-ui": "^1.4.2",
     "react": "^19.1.0",
     "react-day-picker": "^9.7.0",
