Refactor documentation and authentication setup
- Removed unused documentation files: audio-and-output-settings.mdx, key-features.mdx, purpose-of-the-software.mdx.
- Updated index.mdx to a simple introduction.
- Simplified index.ts to only include necessary documentation imports.
- Added better-auth integration:
  - Created auth-cli.ts for authentication configuration with MongoDB.
  - Created auth.ts for better-auth setup with social providers.
  - Created auth-client.ts for client-side authentication handling.
  - Created db.ts for MongoDB connection management.
- Updated package.json and pnpm-lock.yaml to include better-auth dependency.

--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "@workos-inc/authkit-nextjs": "^2.4.1",
     "ai": "^3.3.27",
     "bcrypt": "^6.0.0",
+    "better-auth": "^1.2.12",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
