--- a/package.json
+++ b/package.json
@@ -181,6 +181,7 @@
     "@tauri-apps/cli": "^2.5.0",
     "@types/draft-js": "^0.11.18",
     "@types/github-slugger": "^1.3.0",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
