--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@diceui/checkbox-group": "^0.5.0",
     "@floating-ui/core": "^1.7.2",
     "@floating-ui/react": "^0.27.13",
+    "@floating-ui/react-dom": "^2.1.4",
+    "@floating-ui/react-dom-interactions": "^0.13.3",
     "@geist-ui/core": "^2.3.8",
     "@geist-ui/react": "^2.2.5",
     "@heroui/button": "^2.2.10",
