--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.1.9",
+    "@c15t/nextjs": "^1.4.2",
     "@diceui/checkbox-group": "^0.5.0",
     "@floating-ui/core": "^1.7.2",
     "@floating-ui/react": "^0.27.13",
