--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@radix-ui/react-use-layout-effect": "^1.1.1",
     "@radix-ui/themes": "^3.1.5",
     "@react-three/drei": "^9.115.0",
     "@react-three/fiber": "^8.17.10",
