--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@phosphor-icons/react": "^2.1.10",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-arrow": "^1.1.7",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -92,6 +93,7 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@radix-ui/react-use-layout-effect": "^1.1.1",
+    "@radix-ui/react-use-size": "^1.1.1",
     "@radix-ui/themes": "^3.1.5",
     "@react-three/drei": "^9.115.0",
     "@react-three/fiber": "^8.17.10",
