--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.1.9",
+    "@ai-sdk/react": "^1.2.12",
     "@c15t/nextjs": "^1.4.2",
     "@diceui/checkbox-group": "^0.5.0",
     "@floating-ui/core": "^1.7.2",
@@ -126,6 +127,7 @@
     "fumadocs-ui": "^15.6.0",
     "geist": "^1.3.0",
     "github-slugger": "^1.5.0",
+    "hast-util-to-jsx-runtime": "^2.3.6",
     "input-otp": "^1.4.2",
     "ioredis": "^5.4.1",
     "locomotive-scroll": "^4.1.4",
@@ -160,6 +162,7 @@
     "react-hook-form": "^7.58.1",
     "react-loading-skeleton": "^3.5.0",
     "react-markdown": "^9.0.3",
+    "react-medium-image-zoom": "^5.2.14",
     "react-resizable-panels": "^2.1.9",
     "react-syntax-highlighter": "^15.6.1",
     "react-use-measure": "^2.1.7",
@@ -170,8 +173,10 @@
     "rehype-katex": "^7.0.1",
     "rehype-pretty-code": "^0.12.0",
     "rehype-slug": "^6.0.0",
+    "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
+    "remark-rehype": "^11.1.2",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwind-variants": "^1.0.0",
