feat: add Biome configuration and update dependencies in package.json and pnpm-lock.yaml refactor: enhance Banner component functionality and clean up code

--- a/package.json
+++ b/package.json
@@ -188,6 +188,7 @@
     "zod": "^3.25.67"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.0.6",
     "@fumadocs/cli": "^0.0.3",
     "@mdx-js/loader": "^3.1.0",
     "@next/mdx": "^15.1.6",
