--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@ai-sdk/openai": "^1.1.9",
     "@ai-sdk/react": "^1.2.12",
     "@c15t/nextjs": "^1.4.2",
+    "@c15t/react": "^1.4.2",
     "@diceui/checkbox-group": "^0.5.0",
     "@floating-ui/core": "^1.7.2",
     "@floating-ui/react": "^0.27.13",
