--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "scripts": {
     "tauri": "tauri dev",
     "postinstall": "fumadocs-mdx",
-    "dev": "next dev  & npx next-video sync -w ",
+    "dev": "next dev --turbopack  & npx next-video sync -w ",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -143,7 +143,7 @@
     "motion": "^11.18.2",
     "motion-plus": "^0.1.6",
     "nanostores": "^0.11.4",
-    "next": "^15.3.4",
+    "next": "15.3.5",
     "next-auth": "^4.24.10",
     "next-contentlayer2": "^0.5.0",
     "next-nprogress-bar": "^2.3.13",
@@ -157,9 +157,9 @@
     "qss": "^3.0.0",
     "radix-themes-tw": "^1.1.0",
     "radix-ui": "^1.4.2",
-    "react": "^19.1.0",
+    "react": "19.1.0",
     "react-day-picker": "^9.7.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "19.1.0",
     "react-hook-form": "^7.58.1",
     "react-loading-skeleton": "^3.5.0",
     "react-markdown": "^9.0.3",
@@ -192,21 +192,21 @@
     "@biomejs/biome": "2.0.6",
     "@fumadocs/cli": "^0.0.3",
     "@mdx-js/loader": "^3.1.0",
-    "@next/mdx": "^15.1.6",
+    "@next/mdx": "15.3.5",
     "@tailwindcss/forms": "^0.5.8",
     "@tauri-apps/cli": "^2.5.0",
     "@types/draft-js": "^0.11.18",
     "@types/github-slugger": "^1.3.0",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
     "@types/react-syntax-highlighter": "^15.5.13",
     "electron": "^27.3.11",
     "electron-builder": "^24.13.3",
     "electron-is-dev": "^3.0.1",
     "eslint": "^8.57.1",
-    "eslint-config-next": "14.2.4",
+    "eslint-config-next": "15.3.5",
     "postcss": "^8.5.6",
     "postcss-import": "^16.1.1",
     "prettier": "^3.5.3",
@@ -217,5 +217,9 @@
     "tw-animate-css": "^1.3.4",
     "typescript": "^5",
     "velite": "^0.1.1"
+  },
+  "overrides": {
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6"
   }
 }
