--- a/package.json
+++ b/package.json
@@ -146,6 +146,7 @@
     "next": "15.3.5",
     "next-auth": "^4.24.10",
     "next-contentlayer2": "^0.5.0",
+    "next-intl": "^4.3.4",
     "next-nprogress-bar": "^2.3.13",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
