--- a/package.json
+++ b/package.json
@@ -179,6 +179,7 @@
     "remark-math": "^6.0.0",
     "remark-rehype": "^11.1.2",
     "sonner": "^1.7.4",
+    "sugar-high": "^0.9.3",
     "tailwind-merge": "^2.6.0",
     "tailwind-variants": "^1.0.0",
     "tailwindcss-animate": "^1.0.7",
