--- a/package.json
+++ b/package.json
@@ -188,6 +188,7 @@
     "tailwindcss-mixins": "^0.0.11",
     "three": "^0.170.0",
     "unified": "^11.0.5",
+    "unist-util-visit": "^5.0.0",
     "use-composed-ref": "^1.4.0",
     "vaul": "^0.9.9",
     "zod": "^3.25.67"
@@ -206,6 +207,7 @@
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/unist": "^3.0.3",
     "electron": "^37.2.0",
     "electron-builder": "^24.13.3",
     "electron-is-dev": "^3.0.1",
