--- a/package.json
+++ b/package.json
@@ -142,7 +142,7 @@
     "motion": "^11.18.2",
     "motion-plus": "^0.1.6",
     "nanostores": "^0.11.4",
-    "next": "15.3.5",
+    "next": "^15.4.1",
     "next-auth": "^4.24.10",
     "next-contentlayer2": "^0.5.0",
     "next-intl": "^4.3.4",
@@ -157,9 +157,9 @@
     "qss": "^3.0.0",
     "radix-themes-tw": "^1.1.0",
     "radix-ui": "^1.4.2",
-    "react": "19.1.0",
+    "react": "^19.1.0",
     "react-day-picker": "^9.7.0",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.1",
     "react-loading-skeleton": "^3.5.0",
     "react-markdown": "^9.0.3",
@@ -197,7 +197,7 @@
     "@biomejs/biome": "2.0.6",
     "@fumadocs/cli": "^0.0.3",
     "@mdx-js/loader": "^3.1.0",
-    "@next/mdx": "^15.3.5",
+    "@next/mdx": "15.4.1",
     "@tailwindcss/forms": "^0.5.8",
     "@tauri-apps/cli": "^2.5.0",
     "@types/draft-js": "^0.11.18",
@@ -212,7 +212,7 @@
     "electron-builder": "^24.13.3",
     "electron-is-dev": "^3.0.1",
     "eslint": "^8.57.1",
-    "eslint-config-next": "15.3.5",
+    "eslint-config-next": "15.4.1",
     "postcss": "^8.5.6",
     "postcss-import": "^16.1.1",
     "prettier": "^3.5.3",
