--- a/package.json
+++ b/package.json
@@ -190,11 +190,13 @@
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0",
     "use-composed-ref": "^1.4.0",
-    "vaul": "^0.9.9",
-    "zod": "^3.25.67"
+    "vaul": "^0.9.9"
   },
   "devDependencies": {
     "@biomejs/biome": "2.0.6",
+    "@content-collections/core": "^0.10.0",
+    "@content-collections/mdx": "^0.2.2",
+    "@content-collections/next": "^0.2.6",
     "@fumadocs/cli": "^0.0.3",
     "@mdx-js/loader": "^3.1.0",
     "@next/mdx": "15.4.1",
@@ -222,7 +224,8 @@
     "tailwindcss": "^4.1.10",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5",
-    "velite": "^0.1.1"
+    "velite": "^0.1.1",
+    "zod": "^3.25.67"
   },
   "overrides": {
     "@types/react": "19.1.8",
