--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,9 @@
       }
     ],
     "paths": {
+      "content-collections": ["./.content-collections/generated"],
       "@/content/*": ["content/*"],
+      "@/content-collections": ["./content-collections.ts"],
       "@/.source": ["./.source/index.ts"],
       "@/*": ["./src/*", "source.ts", "./markdown"],
       "contentlayer/generated": ["./.contentlayer/generated"],
