--- a/package.json
+++ b/package.json
@@ -146,6 +146,7 @@
     "next-auth": "^4.24.10",
     "next-contentlayer2": "^0.5.0",
     "next-intl": "^4.3.4",
+    "next-mdx-remote": "^5.0.0",
     "next-nprogress-bar": "^2.3.13",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
@@ -161,6 +162,7 @@
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.1",
+    "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
     "react-markdown": "^9.0.3",
     "react-medium-image-zoom": "^5.2.14",
@@ -171,8 +173,10 @@
     "recharts": "^2.15.4",
     "redis": "^4.7.0",
     "rehype-autolink-headings": "^7.1.0",
+    "rehype-code-titles": "^1.2.0",
     "rehype-katex": "^7.0.1",
     "rehype-pretty-code": "^0.12.0",
+    "rehype-prism-plus": "^2.0.1",
     "rehype-slug": "^6.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
